--- a/index.html
+++ b/index.html
@@ -1,95 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1,
-  maximum-scale=5"
-    />
-
-    <link rel="icon" href="devchallenges.png" />
-
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Team</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="https://devchallenges.io/"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=PT+Serif:wght@400;700&family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
-
-    <title>Devchallenges</title>
-
     <style>
-      body {
+      * {
+        margin: 0;
+        padding: 0;
+        font-family: "Montserrat", sans-serif;
         font-family: "Poppins", sans-serif;
+        font-family: "PT Serif", serif;
       }
-
-      ul {
-        padding-left: 24px;
+      .text-container {
+        display: flex;
+        justify-content: center;
       }
-
-      li {
-        margin-bottom: 8px;
+      .title {
+        color: #000;
+        font-family: PT Serif;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        letter-spacing: -1.62px;
+        margin-top: 110px;
+        margin-right: 215px;
       }
-
-      .welcome {
-        max-width: 800px;
-        margin: 0 auto;
+      .description-text {
+        margin-top: 110px;
       }
-
-      .welcome-text {
-        margin-top: 30vh;
-        font-weight: 500;
+      .des-title {
+        color: #000;
+        font-family: Poppins;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        text-transform: uppercase;
+        margin-bottom: 10px;
       }
-
-      .welcome-text p {
-        font-size: 1rem;
+      .description {
+        color: #000;
+        font-family: Poppins;
+        font-size: 18px;
+        font-style: normal;
         font-weight: 400;
+        line-height: normal;
+        max-width: 439px;
       }
-
-      .welcome-text h1 {
-        font-size: 1.5rem;
-      }
-
-      .welcome-text a {
-        color: #f7542e;
+      @media screen and (max-width: 576px) {
+        .text-container {
+          flex-direction: column;
+          align-items: center;
+        }
+        .title {
+          font-size: 36px;
+          margin-top: 71px;
+          margin-right: auto;
+          margin-left: 12px;
+        }
+        .description-text {
+          margin-top: 38px;
+          margin-left: 12px;
+        }
+        .description {
+          max-width: 333px;
+          font-size: 14px;
+        }
       }
     </style>
   </head>
   <body>
-    <div class="welcome">
-      <div class="welcome-text">
-        <h1>
-          Welcome to
-          <a href="https://devchallenges.io/" target="_blank"
-            >devchallenges.io</a
-          >
-        </h1>
-
-        <p>
-          If you have any questions, don't hesitate to ask on Discord. Here are
-          7 general steps to complete the challenge:
-        </p>
+    <div class="main">
+      <div class="text-container">
+        <h1 class="title">The creative crew</h1>
+        <div class="description-text">
+          <h2 class="des-title">The creative crew</h2>
+          <p class="description">
+            We are team of creatively diverse. driven. innovative individuals
+            working in various locations from the world.
+          </p>
+        </div>
       </div>
-
-      <ul>
-        <li><b>Step 1:</b> Create a new repository on github</li>
-        <li><b>Step 2:</b> Copy resources, README.md to your repository</li>
-        <li>
-          <b>Step 3:</b> Login to Figma to checkout font, color, spacing,..
-        </li>
-        <li><b>Step 4:</b> Complete all user stories</li>
-        <li><b>Step 5:</b> Update README.md</li>
-        <li><b>Step 6:</b> Deploy your app and submit your solution</li>
-        <li>
-          <b>Step 7:</b> Share your solution on Discord, Twitter and other
-          platforms to ask for feedback
-        </li>
-      </ul>
     </div>
   </body>
 </html>
