first row of grid modified

--- a/index.html
+++ b/index.html
@@ -55,6 +55,41 @@
         line-height: normal;
         max-width: 439px;
       }
+      .team-container {
+        padding-top: 10.5;
+        display: flex;
+        justify-content: center;
+      }
+      .grid-container {
+        display: grid;
+        grid-template-columns: repeat(3, 330px);
+      }
+      img {
+        max-width: 238px;
+      }
+      .img1 {
+        padding-top: 85px;
+        margin-top: 87.5px;
+      }
+      .img2 {
+        padding: 33.5px 33.5px 15px 33.5px;
+        margin-top: 239px;
+        margin-right: 23.69px;
+        margin-left: 56.64;
+      }
+      .img3 {
+        padding: 0px 33.5px 15px 33.5px;
+        margin-top: 173px;
+      }
+      .name {
+        color: #000;
+        font-family: Poppins;
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        margin-top: 15px;
+      }
       @media screen and (max-width: 576px) {
         .text-container {
           flex-direction: column;
@@ -87,6 +122,46 @@
             We are team of creatively diverse. driven. innovative individuals
             working in various locations from the world.
           </p>
+        </div>
+      </div>
+      <div class="team-container">
+        <div class="grid-container">
+          <div class="member">
+            <div class="img1">
+              <img src="./photo1.png" alt="" />
+              <h3 class="name">Bill Mahoney</h3>
+            </div>
+          </div>
+          <div class="member">
+            <div class="img2">
+              <img src="./photo2.png" alt="" />
+              <h3 class="name">Saba Cabrera</h3>
+            </div>
+          </div>
+          <div class="member">
+            <div class="img3">
+              <img src="./photo3.png" alt="" />
+              <h3 class="name">Shae Le</h3>
+            </div>
+          </div>
+          <div class="member">
+            <div class="img4">
+              <img src="./photo4.png" alt="" />
+              <h3 class="name">Skylah Lu</h3>
+            </div>
+          </div>
+          <div class="member">
+            <div class="img5">
+              <img src="./photo5.png" alt="" />
+              <h3 class="name">Griff Richards</h3>
+            </div>
+          </div>
+          <div class="member">
+            <div class="img6">
+              <img class="img6" src="./photo6.png" alt="" />
+              <h3 class="name">Stan John</h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
