bottom row of the grid is completed

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         padding-top: 10.5;
         display: flex;
         justify-content: center;
+        padding-bottom: 156px;
       }
       .grid-container {
         display: grid;
@@ -72,14 +73,28 @@
         margin-top: 87.5px;
       }
       .img2 {
-        padding: 33.5px 33.5px 15px 33.5px;
+        padding: 33.5px 33.5px 0px 33.5px;
         margin-top: 239px;
         margin-right: 23.69px;
         margin-left: 56.64;
       }
+      .img2 name {
+        padding-bottom: 49px;
+      }
       .img3 {
-        padding: 0px 33.5px 15px 33.5px;
+        padding: 0px 33.5px 0px 33.5px;
         margin-top: 173px;
+      }
+      .img4 {
+        padding-right: 33.5px;
+      }
+      .img5 {
+        margin-top: 77px;
+        padding-left: 33.5px;
+        margin-right: 55.69px;
+      }
+      .img6 {
+        padding: 0px 33.5px 0px 33.5px;
       }
       .name {
         color: #000;
@@ -158,7 +173,7 @@
           </div>
           <div class="member">
             <div class="img6">
-              <img class="img6" src="./photo6.png" alt="" />
+              <img src="./photo6.png" alt="" />
               <h3 class="name">Stan John</h3>
             </div>
           </div>
